GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.18alpha9 :
    
        - Fix for empty user groups with LDAP.
        
        - Preliminary version of the snmpprinterstatus command added.
        
    - 1.18alpha8 :
    
        - Don't retrieve data when not needed.
          This avoids many database queries.
        
    - 1.18alpha7 :
    
        - New experimental ldapcache directive to improve
          LDAP caching.
          
    - 1.18alpha6 :
        
        - New configuration directive added : maildomain
          to specify the domain to send mail to when user 
          email address is not set in PyKota database.
          
        - More complete email message headers.  
          
    - 1.18alpha5 :
    
        - Debian packaging specific files, contributed by
          Peter Hawkins are now included in the project's tree.
          
        - Preliminary work on future low-level LDAP caching to speed
          up modifications (at least).
          
    - 1.18alpha4 :
    
        - Applied some of the modifications suggested by
          Peter Hawkins, for better Debian integration.
          Most notably cupspykota, pykota, and the shell
          scripts are now installed into /usr/share/pykota
          instead of into /usr/bin
          BEWARE : double check that your symbolic link
          to cupspykota is correct, and that your pykota.conf
          file use correct path for the shell scripts like
          waitprinter.sh and al.
          
        - pkhint command added, to help in configuring correct
          accounting method for PyKota.
          
    - 1.18alpha3 :
    
        - Fixed a rare bug in cupspykota backend which gave 